Corrige nome da Aula46

--- a/Curso/Aula46-ListaTarefa/index.html
+++ b/Curso/Aula46-ListaTarefa/index.html
@@ -14,14 +14,13 @@
   <section class="container">
     <h1>Lista de tarefas</h1>
 <div>
-  <input type="text" class="descricao">
-  <button type="submit" class="adicionarTarefa">Adicionar tarefa</button>
+  Descrição da tarefa
+  <p></p><input type="text" class="descricao"></p>
+  <button class="adicionarTarefa">Adicionar tarefa</button>
 </div>
 <div>
-  <ul>
-    <li class="tarefas">
-
-    </li>
+  <ul class="listaTarefas">
+  
   </ul>
 </div>
   </section>
