Revisando os estudos + marcações adicionadas

--- a/Curso/Aula11/index.html
+++ b/Curso/Aula11/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- aidiciona o arquivo js no html -->
     <script src="index.js"></script>
 </body>
 </html>
