Correção da descrição H1

--- a/Curso/Browser/Aula93-GeradorSenha/public/index.html
+++ b/Curso/Browser/Aula93-GeradorSenha/public/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <section class="container">
-    <h1>Gerarador de senha</h1>
+    <h1>Gerador de senha</h1>
     <div class="resultado">Selecione as opções</div>
     <div>
       <p>Total de caracteres <input value="20" type="number" min="1" max="20" class="quantidade"></p>
