Correção de nome

--- a/Curso/Browser/Aula92-GeradorCPF/public/index.html
+++ b/Curso/Browser/Aula92-GeradorCPF/public/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <section class="container">
-    <h1>Gerarador de CPF</h1>
+    <h1>Gerador de CPF</h1>
     <div class="resultado"></div>
 
   </section>
